2003-12-01  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-check-bogofilter): check the bogofilter headers
	AFTER the save-excursion scope is over.  From Adrian Lanz
	<lanz@fowi.ethz.ch>.
	(spam-fetch-field-message-id-fast): doc fix

2003-12-01  Simon Josefsson  <jas@extundo.com>

	* gnus-agent.el (gnus-agent-expire-days): Doc fix.

2003-11-30  Simon Josefsson  <jas@extundo.com>

	* gnus-agent.el (gnus-agent-expire-group-1): Bind message-log-max
	when messaging "X % completed" to inhibit logging them to the
	message buffer.
	(gnus-agent-expire-group-1): Mention group name in messages.
	(gnus-agent-expire-group-1): Only print a message for an article
	when there actually was something done to it.

	* mm-util.el (mm-enable-multibyte): Call set-buffer-multibyte with
	'to argument.  Fixes something or other in Emacs 22, and is
	backwards compatible.  From Kenichi Handa <handa@m17n.org>.

	* gnus-agent.el (gnus-agent-expire-unagentized-dirs): Custom fix.

2003-11-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-agent.el (gnus-agent-covered-methods): Remove nil methods. 

2003-11-29  Kevin Greiner <kgreiner@xpediantsolutions.com>
	* gnus-start.el (gnus-activate-group): The active range of the
	group must include the articles known to the agent.

	* gnus.el (gnus-agent-method-p): Accept a server name as the
	method being tested.

2003-11-29  Alexander Kreuzer <alex@freesources.org>  (tiny change)

	* nnrss.el (nnrss-check-group): Set xml when nnrss-use-local is t.

2003-11-29  Jesper Harder  <harder@ifa.au.dk>

	* gnus-group.el (gnus-group-make-menu-bar): Add
	gnus-group-make-rss-group.

2003-11-28  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el: Added custom-manual links to all variables that have
	an index entry in the message manual.
	(message-generate-headers-first): Fixed doc-string.

2003-11-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-msg.el (gnus-summary-yank-message): Don't bind
	gnus-display-mime-function to nil so that non-ascii text is